--- a/Test-page.css
+++ b/Test-page.css
@@ -140,8 +140,7 @@ label:has(input:checked) {
 }
 
 @media (max-width: 480px) {
-    body { font-size: 14px; }
-    .submit-btn { width: 100%; margin: 20px 0; }
+    .content {font-size: 14px;}
+    .submit-btn { width: 70%; margin: 20px 0; }
     .questions { margin: 0 5%; }
-    .submit-btn { width: 70%; }
 }
